--- a/.github/workflows/static-site.yml
+++ b/.github/workflows/static-site.yml
@@ -31,19 +31,19 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+      - name: Setup Pages
+        uses: actions/configure-pages@v3
       - name: Setup .NET Core SDK
         uses: actions/setup-dotnet@v3.0.3
         with:
           dotnet-version: 7.0
       - name: Publish .NET Core Project
         run: dotnet publish WebTest.csproj -c Release -o release --nologo
-      - name: Setup Pages
-        uses: actions/configure-pages@v3
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
         with:
           # Upload entire repository
-          path: 'release/wwwroot'
+          path: 'release/wwwroot/*'
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v1
